--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Currency Exchange Rate</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" href="scripts/css/main.css"/>
 	<link rel="stylesheet" media="(min-width:701px)" href="scripts/css/main-lg.css">
 	<link rel="stylesheet" media="(min-width:981px)" href="scripts/css/main-xlg.css">
